--- a/Mini_project_2/project.html
+++ b/Mini_project_2/project.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../HTML & CSS/common/reset.css" />
+    <link rel="stylesheet" href="mian.css" />
     <link rel="stylesheet" href="hearder.css" />
+    <link rel="stylesheet" href="first.css" />
+    <link rel="stylesheet" href="second.css" />
     <script type="module" src="project.js"></script>
     <link
       rel="stylesheet"
@@ -18,5 +21,8 @@
   </head>
   <body>
     <div class="box"></div>
+    <section class="second"></section>
   </body>
 </html>
+
+<button></button>
