--- a/mini_project_3/HTML/rock_paper_scissors.html
+++ b/mini_project_3/HTML/rock_paper_scissors.html
@@ -11,6 +11,16 @@
   </head>
   <body>
     <div class="container">
+      <div class="modal hidden">
+        <div class="modal-content">
+          <span class="result1">비김!</span>
+          <span class="result2">PC : ✊</span>
+          <span class="result3">Player : ✌️</span>
+          <span class="result4">3초 뒤 자동으로 닫힙니다.</span>
+          <button id="close_btn">닫기</button>
+        </div>
+      </div>
+
       <div class="menu">
         <div class="heart">
           <img src="../photo/heart.png" alt="" />
