--- a/mini_project_3/HTML/rock_paper_scissors.html
+++ b/mini_project_3/HTML/rock_paper_scissors.html
@@ -17,7 +17,21 @@
           <span class="result2">PC : ✊</span>
           <span class="result3">Player : ✌️</span>
           <span class="result4">3초 뒤 자동으로 닫힙니다.</span>
-          <button id="close_btn">닫기</button>
+          <button class="close_btn">닫기</button>
+        </div>
+      </div>
+
+      <div class="modal_end hidden">
+        <div class="modal-content">
+          <span class="end1">!!!!!!!게임종료!!!!!!!!</span>
+          <span class="end2" style="font-size: 30px">점수 : x점</span>
+          <span class="end3">x번의 승리</span>
+          <span class="end4">y번의 패배</span>
+          <span class="end5">z번의 무승부</span>
+
+          <span class="end6">10초후 자동으로 닫힙니다.</span>
+
+          <button class="close_btn__end">닫기</button>
         </div>
       </div>
 
@@ -40,7 +54,7 @@
       <div class="content">
         <div class="totalScore">
           <div class="pcScore">
-            <span>PC : 0</span>
+            <span class="pcScore__pc">PC : 0</span>
           </div>
 
           <div>
@@ -48,7 +62,7 @@
           </div>
 
           <div class="userScore">
-            <span>Player : 0</span>
+            <span class="userScore__user">Player : 0</span>
           </div>
         </div>
 
