--- a/mini_project_3/HTML/intro.html
+++ b/mini_project_3/HTML/intro.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../../../HTML & CSS/common/reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="../css/reset.css" />
     <script src="../js/intro.js" defer></script>
     <link rel="stylesheet" href="../css/second.css" />
     <link rel="stylesheet" href="../css/intro.css" />
@@ -23,12 +22,12 @@
     <section class="first">
       <div class="intro">
         <div class="Hello">
-          <span>Hello,</span>
-          <span>Game</span>
-          <span>World!</span>
-          <div class="intro__down">
-            <i class="fa-solid fa-angles-down"></i>
-          </div>
+          <span class="intro__down">Hello,</span>
+          <span class="intro__down">Game</span>
+          <span class="intro__down">World!</span>
+          <span class="downImg ">
+           
+          </span>
         </div>
       </div>
     </section>
