--- a/mini_project_3/HTML/rock_paper_scissors.html
+++ b/mini_project_3/HTML/rock_paper_scissors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../../../HTML & CSS/common/reset.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/rock_paper_scissors.css" />
     <script src="../js/rock_paper_scissors.js" defer></script>
     <meta charset="UTF-8" />
